--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,5 +20,6 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile 'com.makeramen:dragsortadapter:1.3.0'
 }
