copied IntentSelector from Minimalistic Text added edit buttons to the EditLaunchFragment

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,11 @@
         </activity>
         <activity android:name=".view.activities.EditLaunchActivity" >
         </activity>
+        <activity
+            android:name="de.devmil.paperlaunch.view.utils.IntentSelector"
+            android:label="Select an Intent" >
+        </activity>
+
     </application>
 
 </manifest>
