--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
     compile 'com.cocosw:bottomsheet:1.+@aar'
+    compile 'com.android.support:palette-v7:23.1.1'
 }
