--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="de.devmil.paperlaunch">
 
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,7 +12,7 @@
         android:theme="@style/Theme.PaperLaunch">
         <activity
             android:name=".TestDrive"
-            android:label="@string/app_name"></activity>
+            android:label="@string/app_name" />
         <activity
             android:name=".SettingsActivity"
             android:label="@string/app_name">
@@ -19,13 +22,24 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".view.activities.EditLaunchActivity"></activity>
-        <activity
-            android:name=".view.utils.IntentSelector"
-            android:label="Select an Intent"></activity>
         <activity
             android:name=".EditFolderActivity"
-            android:label="@string/title_activity_edit_folder"></activity>
+            android:label="@string/title_activity_edit_folder" />
+
+        <service
+            android:name=".service.LauncherOverlayService"
+            android:enabled="true"
+            android:exported="true" />
+
+        <receiver
+            android:name=".service.BootReceiver"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
+        </receiver>
+
     </application>
 
 </manifest>
