fixed an app selection bug added notification so that the application service can run in the background without getting problems easily

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,10 @@
             </intent-filter>
         </activity>
         <activity
+            android:name="de.devmil.paperlaunch.view.utils.IntentSelector"
+            android:label="Select an Intent" >
+        </activity>
+        <activity
             android:name=".EditFolderActivity"
             android:label="@string/title_activity_edit_folder" />
 
