renamed SettingsActivity to MainActivity removed TestDrive

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,10 +11,7 @@
         android:label="@string/app_name"
         android:theme="@style/Theme.PaperLaunch">
         <activity
-            android:name=".TestDrive"
-            android:label="@string/app_name" />
-        <activity
-            android:name=".SettingsActivity"
+            android:name=".MainActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
