added About activity containing license informations (taken from other Devmil projects)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,6 +48,16 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="de.devmil.paperlaunch.MainActivity" />
         </activity>
+        <activity
+            android:name=".AboutActivity"
+            android:label="@string/title_activity_about"
+            android:screenOrientation="portrait"
+            android:configChanges="orientation|keyboardHidden"
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="de.devmil.paperlaunch.MainActivity" />
+        </activity>
     </application>
 
 </manifest>
