--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,6 @@ dependencies {
     compile 'com.android.support:design:23.1.1'
     compile 'com.cocosw:bottomsheet:1.+@aar'
     compile 'com.android.support:palette-v7:23.1.1'
+    compile 'io.reactivex:rxandroid:1.1.0'
+    compile 'io.reactivex:rxjava:1.1.0'
 }
