--- a/build.gradle
+++ b/build.gradle
@@ -4,9 +4,7 @@ buildscript {
     ext.kotlin_version = '1.1.51'
     repositories {
         jcenter()
-        maven {
-            url "https://maven.google.com"
-        }
+        google()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.0'
@@ -20,8 +18,6 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
-        maven {
-            url "https://maven.google.com"
-        }
+        google()
     }
 }
