--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,11 +44,10 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "com.android.support:recyclerview-v7:$android_support_version"
     implementation "com.android.support:design:$android_support_version"
-    implementation 'com.cocosw:bottomsheet:1.+@aar'
     implementation "com.android.support:palette-v7:$android_support_version"
     implementation 'io.reactivex:rxandroid:1.1.0'
     implementation 'io.reactivex:rxjava:1.1.0'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
 repositories {
     mavenCentral()
