--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,7 +29,10 @@ android {
     }
     buildTypes {
         release {
-            signingConfig signingConfigs.release
+            def propsFile = file('../Key/keystore.properties')
+            if(propsFile.exists()) {
+                signingConfig signingConfigs.release
+            }
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
