--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 27
-    buildToolsVersion '27.0.3'
+    buildToolsVersion '28.0.3'
 
     defaultConfig {
         applicationId "de.devmil.paperlaunch"
@@ -11,6 +11,7 @@ android {
         targetSdkVersion 27
         versionCode 14
         versionName "1.0.12"
+        archivesBaseName = "paperlaunch-v${defaultConfig.versionName}-${buildTime()}"
     }
     signingConfigs {
         release {
@@ -52,10 +53,14 @@ dependencies {
     implementation 'io.reactivex:rxandroid:1.1.0'
     implementation 'io.reactivex:rxjava:1.1.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 }
 repositories {
     mavenCentral()
+}
+
+def buildTime() {
+    return new Date().format("yyyyMMdd_HH_mm")
 }
 
 apply plugin: 'kotlin-android-extensions'
