apk name doesn't contain the time any more

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,7 +60,7 @@ repositories {
 }
 
 def buildTime() {
-    return new Date().format("yyyyMMdd_HH_mm")
+    return new Date().format("yyyyMMdd")
 }
 
 apply plugin: 'kotlin-android-extensions'
