--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,7 @@ android {
         versionCode 14
         versionName "1.0.12"
         archivesBaseName = "paperlaunch-v${defaultConfig.versionName}-${buildTime()}"
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     signingConfigs {
         release {
@@ -54,12 +55,14 @@ dependencies {
     implementation 'io.reactivex:rxjava:1.1.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+
+    testImplementation 'junit:junit:4.12'
 }
 repositories {
     mavenCentral()
 }
 
-def buildTime() {
+static def buildTime() {
     return new Date().format("yyyyMMdd")
 }
 
