--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
     ext.kotlin_version = '1.7.10'
     ext.android_support_version = '28.0.0'
     repositories {
+        mavenCentral()
         google()
     }
     dependencies {
