--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,12 +5,19 @@ android {
     defaultConfig {
         applicationId "de.devmil.paperlaunch"
         minSdkVersion 21
-        compileSdkVersion 34
-        targetSdkVersion 34
+        compileSdkVersion 35
+        targetSdkVersion 35
         versionCode 18
         versionName "1.3.0"
         archivesBaseName = "paperlaunch-v${defaultConfig.versionName}-${buildTime()}"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+    }
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
     signingConfigs {
         release {
@@ -56,7 +63,7 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:2.0.4'
 
     testImplementation 'junit:junit:4.13.2'
-    testImplementation 'org.mockito:mockito-core:3.0.0'
+    testImplementation 'org.mockito:mockito-core:5.8.0'
 }
 repositories {
     mavenCentral()
