fix tests (was missed when upgrading the dependencies)

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,7 @@ dependencies {
 
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'org.mockito:mockito-core:5.8.0'
+    testImplementation 'org.hamcrest:hamcrest:2.2'
 }
 repositories {
     mavenCentral()
